inital update for atomic styiling

--- a/html/themes/custom/elsa/components/00-config/mixins/_padding.scss
+++ b/html/themes/custom/elsa/components/00-config/mixins/_padding.scss
@@ -1,10 +1,8 @@
-/*
-Use the padding variables and mixins to set padding accross the theme.
-*/
+// Use the padding variables and mixins to set padding accross the theme.
 
 // padding varibles
 $clear-padding: 0rem;
-$sml-padding: 1rem;
+$small-padding: 1rem;
 $med-padding: 2rem;
 $lrg-padding: 2.5rem;
 
