--- a/html/themes/custom/elsa/components/02-atoms/captions/_captions.scss
+++ b/html/themes/custom/elsa/components/02-atoms/captions/_captions.scss
@@ -16,6 +16,6 @@ Use the img-catption class on `<p>` elements wrapping `<caption>` elements.
 // TODO: figure out if we can assign this to the caption element
 .img-caption {
     @include font ($body-font-default, 1.4rem, $grey, 500, 2rem);
-    @include vertical-margin($sml-margin);
+    @include vertical-margin($small-margin);
     caption-side: bottom-outside;
   }
