--- a/html/themes/custom/elsa/components/00-config/mixins/_margin.scss
+++ b/html/themes/custom/elsa/components/00-config/mixins/_margin.scss
@@ -1,10 +1,8 @@
-/*
-Use the margin variables and mixins to set margin accross the theme.
-*/
+// Use the margin variables and mixins to set margin accross the theme.
 
 // margin varibles
 $clear-margin: 0rem;
-$sml-margin: 1rem;
+$small-margin: 1rem;
 $med-margin: 2rem;
 $lrg-margin: 2.5rem;
 
@@ -12,6 +10,7 @@ $lrg-margin: 2.5rem;
 
 //@include small-margin ($spacing);
 @mixin vertical-margin ($spacing) {
+  margin-top: 0;
   margin-bottom: $spacing;  
 }
 
