--- a/html/themes/custom/elsa/components/02-atoms/chips/_chips.scss
+++ b/html/themes/custom/elsa/components/02-atoms/chips/_chips.scss
@@ -15,6 +15,6 @@ Use  a chip for taxonomy or tag indicators throughout the theme
 //our linked chips
 a.chip {
     @include font ($body-font-default, 1.6rem, $grey, null, 2.3rem);
-    @include vertical-margin($sml-margin);
+    @include vertical-margin($small-margin);
     text-decoration: none;
   }
