--- a/html/themes/custom/elsa/css/elsa.css
+++ b/html/themes/custom/elsa/css/elsa.css
@@ -1,3 +1,67 @@
+/* @start color */
+:root {
+  --black: #000000;
+  --white: #ffffff;
+  --grey: #6C6463;
+  --op-grey: rgba(108, 100, 99, 0.3);
+  --primary-colour: #002F6C;
+  --secondary-colour: #D0021B; }
+
+/* @end color */
+/*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
+@media print {
+  *,
+  *:before,
+  *:after {
+    background: transparent !important;
+    color: #000 !important;
+    box-shadow: none !important;
+    text-shadow: none !important; }
+  a,
+  a:visited {
+    text-decoration: underline; }
+  a[href]:after {
+    content: " (" attr(href) ")"; }
+  abbr[title]:after {
+    content: " (" attr(title) ")"; }
+  a[href^="#"]:after,
+  a[href^="javascript:"]:after {
+    content: ""; }
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid; }
+  thead {
+    display: table-header-group; }
+  tr,
+  img {
+    page-break-inside: avoid; }
+  img {
+    max-width: 100% !important; }
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3; }
+  h2,
+  h3 {
+    page-break-after: avoid; }
+  .navbar {
+    display: none; }
+  .btn > .caret,
+  .dropup > .btn > .caret {
+    border-top-color: #000 !important; }
+  .label {
+    border: 1px solid #000; }
+  .table {
+    border-collapse: collapse !important; }
+    .table td,
+    .table th {
+      background-color: #fff !important; }
+  .table-bordered th,
+  .table-bordered td {
+    border: 1px solid #ddd !important; } }
+
 *,
 *::before,
 *::after {
@@ -268,22 +332,25 @@ template {
 [hidden] {
   display: none !important; }
 
-/* @start color */
-:root {
-  --black: #000000;
-  --white: #ffffff;
-  --grey: #6C6463;
-  --op-grey: rgba(108, 100, 99, 0.3);
-  --primary-colour: #002F6C;
-  --secondary-colour: #D0021B; }
+.fade {
+  opacity: 0;
+  transition: opacity .15s linear; }
+  .fade.in {
+    opacity: 1; }
 
-/* @end color */
-/*
-Use the margin variables and mixins to set margin accross the theme.
-*/
-/*
-Use the padding variables and mixins to set padding accross the theme.
-*/
+.collapse {
+  display: none; }
+  .collapse.in {
+    display: block; }
+
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  transition-property: height, visibility;
+  transition-duration: 0.35s;
+  transition-timing-function: ease; }
+
 /*
 @styleguide
 
@@ -307,6 +374,48 @@ Default styles are assigned to elements.
 
     <h4>Use h4 for emphasis</h4>
 
+The elements in this section give semantics to inline text.
+    <p>The default font-size and line-height properties are applied to the <code>&lt;body&gt;</code> element and all paragraphs. In addition, <code>&lt;p&gt;</code> (paragraphs) receive a bottom margin.</p>
+    <p>You can use the mark tag to
+        <mark>highlight</mark> text.</p>
+    <p><del>This line of text is meant to be treated as deleted text.</del>
+    </p>
+    <p><s>This line of text is meant to be treated as no longer accurate.</s>
+    </p>
+    <p><ins>This line of text is meant to be treated as an addition to the document.</ins>
+    </p>
+    <p><u>This line of text will render as underlined</u>
+    </p>
+    <p><small>This line of text is meant to be treated as fine print.</small>
+    </p>
+    <p>The following snippets of text are <strong class="">rendered</strong> as <b class="">bold
+    text</b>. Bold text nested inside <i>italic text <b>should</b></i> <em>still be
+    <strong>bold</strong></em>.</p>
+    <p>The following snippets of text are <em class="">rendered</em> as <i class="">italic text</i>. Italic text nested inside <b>bold text <i>should</i></b> <strong>still be
+    <em>italic</em></strong>
+    </p>
+    <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>. And <abbr title="HyperText Markup Language">HTML</abbr> is an acroynm.</p>
+    <p><abbr>M<sup>lle</sup></abbr> Gwendoline wrote the equation <code>f(x, n) = log<sub>4</sub>x<sup class="">n</sup></code>.</p>
+
+Addresses
+Present contact information for the nearest ancestor or the
+entire body of work. Preserve formatting by ending all lines with `<br>`.
+
+Blockquotes
+Wrap `<blockquote>` around any __HTML__ as the quote.
+For straight quotes, we recommend a `<p>`.
+
+Horizontal rule
+The `<hr>` element represents a paragraph-level thematic break,
+e.g. a scene change in a story, or a transition to another topic
+within a section of a reference book.
+<p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque
+penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id
+dolor id nibh ultricies vehicula.</p>
+<hr>
+<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla.</p>
+
 <span style="font-weight:bold; font-size:22px;">CSS</span>
 */
 html {
@@ -319,39 +428,27 @@ body {
   color: #000000;
   line-height: 2.3rem; }
 
-h1 {
-  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
-  font-size: 6.4rem;
-  color: #002F6C;
-  font-weight: 600;
-  line-height: 6.9rem;
-  margin-bottom: 2.5rem; }
+b,
+strong {
+  font-weight: bold; }
 
-.section-header {
-  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
-  font-size: 2.4rem;
-  color: #002F6C;
-  font-weight: 600;
-  line-height: 3.9rem;
-  margin-bottom: 2rem;
-  text-transform: uppercase; }
+abbr[title],
+abbr[data-original-title] {
+  cursor: help;
+  border-bottom: 1px dotted #000000; }
 
-h2 {
-  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
-  font-size: 3.9rem;
-  color: #002F6C;
-  font-weight: 600;
-  line-height: 4.6rem;
-  margin-bottom: 2rem; }
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
 
-h4 {
-  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
-  font-size: 2rem;
-  color: #000000;
-  font-weight: 300;
-  line-height: 3.1rem;
-  margin-bottom: 2rem;
-  font-style: italic; }
+sup {
+  top: -0.5em; }
+
+sub {
+  bottom: -0.25em; }
 
 /*
 @styleguide
@@ -378,11 +475,11 @@ Use horizontal breaks to seperate from content below
 <br class="horizontal-break"></br>
 <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.</p>
 
-    <br class="horizontal-break"></br>
+    <hr class="horizontal-break"></hr>
 
 <span style="font-weight:bold; font-size:22px;">CSS<span>
 */
-.horizontal-break {
+hr.horizontal-break {
   display: block;
   content: "";
   width: 100%;
@@ -430,6 +527,7 @@ Use the btn--go class on `<button type="go">` elements.
 <span style="font-weight:bold; font-size:22px;">CSS</span>
 */
 input[type="submit"].btn {
+  margin-top: 0;
   margin-bottom: 2rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -444,7 +542,8 @@ input[type="submit"].btn {
   input[type="submit"].btn--input {
     background-color: #002F6C; }
 
-button.btn {
+button {
+  margin-top: 0;
   margin-bottom: 2rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -457,9 +556,9 @@ button.btn {
   line-height: 1rem;
   border: 0;
   background-color: #002F6C; }
-  button.btn--reset {
+  button--reset {
     background-color: #D0021B; }
-  button.btn--go {
+  button--go {
     background-color: rgba(108, 100, 99, 0.3); }
 
 /*
@@ -481,6 +580,7 @@ Use the img-catption class on `<p>` elements wrapping `<caption>` elements.
   color: #6C6463;
   font-weight: 500;
   line-height: 2rem;
+  margin-top: 0;
   margin-bottom: 1rem;
   caption-side: bottom-outside; }
 
@@ -502,6 +602,7 @@ a.chip {
   font-size: 1.6rem;
   color: #6C6463;
   line-height: 2.3rem;
+  margin-top: 0;
   margin-bottom: 1rem;
   text-decoration: none; }
 
@@ -524,6 +625,7 @@ cite {
   color: #6C6463;
   font-weight: 600;
   line-height: 2rem;
+  margin-top: 0;
   margin-bottom: 2rem;
   position: relative;
   font-style: italic;
@@ -550,6 +652,7 @@ Use the input--field class on `<input>` elements.
 <span style="font-weight:bold; font-size:22px;">CSS<span>
 */
 input[type="text-input"].input--field {
+  margin-top: 0;
   margin-bottom: 2.5rem;
   height: 3.5rem;
   width: 100%; }
@@ -563,6 +666,69 @@ input[type="text-input"].input--field {
     color: #6C6463; }
   input[type="text-input"].input--field::-webkit-input-placeholder {
     color: #6C6463; }
+
+h1,
+.h1 {
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-size: 6.4rem;
+  color: #002F6C;
+  font-weight: 600;
+  line-height: 6.9rem;
+  margin-top: 0;
+  margin-bottom: 2.5rem; }
+
+.section-title {
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-size: 2.4rem;
+  color: #002F6C;
+  font-weight: 600;
+  line-height: 3.9rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  text-transform: uppercase; }
+
+h2,
+.h2 {
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-size: 3.9rem;
+  color: #002F6C;
+  font-weight: 600;
+  line-height: 4.6rem;
+  margin-top: 0;
+  margin-bottom: 2rem; }
+
+h4,
+.h4 {
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-size: 2rem;
+  color: #000000;
+  font-weight: 300;
+  line-height: 3.1rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-style: italic; }
+
+h5,
+.h5 {
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-size: 2rem;
+  color: #000000;
+  font-weight: 300;
+  line-height: 3.1rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-style: italic; }
+
+h6,
+.h6 {
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-size: 2rem;
+  color: #000000;
+  font-weight: 300;
+  line-height: 3.1rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-style: italic; }
 
 /*
 @styleguide
@@ -628,6 +794,7 @@ These are our image styles
 
 */
 img {
+  margin-top: 0;
   margin-bottom: 2.5rem;
   margin-right: 0rem;
   margin-left: 0rem;
@@ -722,6 +889,7 @@ p {
   font-size: 1.6rem;
   color: #000000;
   line-height: 2.3rem;
+  margin-top: 0;
   margin-bottom: 2.5rem; }
 
 /*
@@ -768,9 +936,10 @@ Use the btn--input classes on `<input type="submit">` elements.
 */
 ul.breadcrumbs {
   padding-left: 0; }
-  ul.breadcrumbs:after {
+  ul.breadcrumbs:before, ul.breadcrumbs:after {
     content: " ";
-    display: table;
+    display: table; }
+  ul.breadcrumbs:after {
     clear: both; }
   ul.breadcrumbs li {
     list-style: none;
@@ -804,6 +973,35 @@ Use the #search-form id on `search-form` components.
 */
 #search-form {
   padding: 1rem; }
+
+table {
+  border-collapse: collapse; }
+  table caption {
+    color: #000000;
+    text-align: left;
+    caption-side: bottom; }
+
+th {
+  text-align: left; }
+
+.table {
+  width: 100%;
+  max-width: 100%; }
+  .table th,
+  .table td {
+    vertical-align: top;
+    word-wrap: break-word; }
+  .table thead th {
+    text-transform: uppercase;
+    vertical-align: bottom; }
+
+.table-responsive {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+  -ms-overflow-style: -ms-autohiding-scrollbar; }
+  .table-responsive .table-bordered {
+    border: 0; }
 
 /*
 @styleguide
