--- a/html/themes/custom/elsa/css/elsa.css
+++ b/html/themes/custom/elsa/css/elsa.css
@@ -354,6 +354,50 @@ template {
 /*
 @styleguide
 
+@title Regions
+
+Use regions to place our blocks. The regions will use a gridCSS formula to deal with structure and placement at breakpoints.
+
+<span style="font-weight:bold; font-size:22px;">CSS</span>
+*/
+.grid-layout {
+  grid-template-areas: "nav nav nav" "header header header"     "auxiliary-sidebar main-content sidebar-right-top" "auxiliary-sidebar main-content sidebar-right-bottom"     "bottom-content bottom-content bottom-content";
+  -ms-grid-columns: 300px 300px 250px;
+      grid-template-columns: 300px 300px 250px;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr; }
+
+.region--nav {
+  grid-area: nav;
+  background-color: lightcoral; }
+
+.region--header {
+  grid-area: header;
+  background-color: lightgreen; }
+
+.region--auxiliary-sidebar {
+  grid-area: auxiliary-sidebar;
+  background-color: lightgoldenrodyellow; }
+
+.region--sidebar-right-top {
+  grid-area: sidebar-right-top;
+  background-color: lightcyan; }
+
+.region--sidebar-right-bottom {
+  grid-area: sidebar-right-bottom;
+  background-color: lightgrey; }
+
+.region--main-content {
+  grid-area: main-content;
+  background-color: lightblue; }
+
+.region--bottom-content {
+  grid-area: bottom-content;
+  background-color: lightseagreen; }
+
+/*
+@styleguide
+
 @title Typography
 
 Default styles are assigned to elements.
