--- a/html/themes/custom/elsa/templates/layout/region--header.html.twig
+++ b/html/themes/custom/elsa/templates/layout/region--header.html.twig
@@ -1,7 +1,11 @@
+{# assiging the region prefix to our automate our classing system for region --suffix #}
+{%
+  set classes = [
+    'region--' ~ region|clean_class,
+  ]
+%}
 {% if content %}
-  <nav {{ attributes.addClass('navbar navbar-default navbar-fixed-top') }} role="banner">
-    <div class="container container--navbar">
-      {{ content }}
-    </div>
-  </nav>
+  <div{{ attributes.addClass(classes).setAttribute('id', 'header') }}>
+    {{ content }}
+  </div>
 {% endif %}
