getting our grid layout structure working

--- a/html/themes/custom/elsa/components/00-config/mixins/_breakpoints.scss
+++ b/html/themes/custom/elsa/components/00-config/mixins/_breakpoints.scss
@@ -1,7 +1,7 @@
 //breakpoint variables
-
+// $mobile: 400px;
 //at tablet portriat we should already be getting the desktop experience
-$tablet: 569px;
+$tablet: 767px;
 //any adjustments larger than tablet landscape should should this breakpoint
 $desktop: 1025px;
 
