--- a/html/themes/custom/elsa/css/elsa.css
+++ b/html/themes/custom/elsa/css/elsa.css
@@ -369,12 +369,12 @@ main {
       grid-template-columns: 1fr;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-  grid-template-areas: "header"  "maincontent" "auxiliarysidebar"   "sidebarrighttop"      "sidebarrightbottom"  "bottomcontent" "nav"; }
+  grid-template-areas: "header"  "main-content" "auxiliary-sidebar"   "sidebar-right-top"      "sidebar-right-bottom"  "bottom-content" "nav"; }
   @media (min-width: 767px) {
     .grid-layout {
       -ms-grid-columns: auto minmax(300px, 1fr);
           grid-template-columns: auto minmax(300px, 1fr);
-      grid-template-areas: "nav nav"  "header header"  "maincontent auxiliarysidebar" "maincontent sidebarrighttop"      "maincontent sidebarrightbottom"  "bottomcontent bottomcontent"; } }
+      grid-template-areas: "nav nav"  "header header"  "main-content auxiliary-sidebar" "main-content sidebar-right-top"      "main-content sidebar-right-bottom"  "bottom-content bottom-content"; } }
   @media (min-width: 1025px) {
     .grid-layout {
       -ms-grid-columns: minmax(300px, 1fr) minmax(auto, 650px) minmax(300px, 1fr);
